# Edu-25

./: .gitignore  README.md  display_graph.py  fetch_graph_data.py  package-lock.json  pingdb.py  poetry.lock.bak  pyproject.toml  run_server.py  setup_and_run.sh  setup_vector_index.py  simple_search.py  start_server.py  test.py  test_mongo_connection.py  test_ping.py  test_ping_and_mongo.py  test_server_endpoints.py
.devcontainer/: Dockerfile  devcontainer.json
Client/: package-lock.json  package.json
Client/app/: page.tsx
Client/app/api/files/: route.ts
Client/app/api/keywords/: route.ts
Client/app/api/run/: route.ts
Client/app/api/simulate-study/: route.ts
Client/app/graphs/: page.tsx
Client/app/graphs/newGraphs/: page.tsx
Client/app/lenses/: page.tsx
Client/app/rewards/: page.tsx
Client/components/: braynr-header.tsx  forum-page.tsx  new-question-form.tsx  question-card.tsx  reward-avatar.tsx  user-profile.tsx  wiki-article.tsx
Client/components/ui/: forum-page.tsx
Client/types/: project-data.ts  subject.ts
Server/: database.py  main.py
Server/app/controllers/: graph_controller.py  user_controller.py
Server/app/db/: database.py  mongodb.py
Server/app/models/: user.py
Server/app/repositories/: base_repository.py  user_repository.py
Server/app/routers/: graph_router.py  lens.py  testdb_router.py  upload.py  users.py
src/: add_documents.py  config.py  upload.py  vector_search.py
src/agents/keywords_finder_agent/: agent.py
src/agents/study_graph_planner_agent/: agent.py  planner.py
src/agents/update_planning_graph_agent/: agent.py
src/db/: client.py
src/documents/: loader.py  retriever.py
src/keywords_finder/: agent.py
(+2 files in other folders)
