[tool.poetry]
name = "edu-25"
version = "0.1.0"
description = ""
authors = ["Infinity team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-adk = "^0.5.0"
langchain = "^0.3.25"
langchain-mongodb = "^0.6.1"
langchain-google-genai = "^2.1.4"
pymongo = "^4.12.1"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
