[tool.poetry]
name = "edu-25"
version = "0.1.0"
description = ""
authors = ["Infinity team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-adk = "^0.5.0"
pymongo = "^4.12.1"
python-dotenv = "^1.1.0"
google-genai = "^1.14.0"
tika = "^3.1.0"
pypdf2 = "^3.0.1"
fitz = "^0.0.1.dev2"
pymupdf = "^1.25.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
